sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:15: error: reassignment to val
        getNombreValeurs=n-1
                        ^