sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var i =0
  var n=0
  var echanger=true;
  n=getNombreValeurs
  while(echanger){
  
		echanger=false
    
 	  for (i<- 0 to n-2){
    	if(plusPetit(i+1:Int,i:Int):Boolean){
     	 echange(i:Int,i+1:Int)
        echanger=true;
        getNombreValeurs=n-1
        
       
        
       
      }
     }  
  } 
}